# goit-ds-hw-03

./: DS_HW_3.ipynb  Readme.md  Scrup.py  main.py  pyproject.toml
json/: authors.json  quotes.json
